	* Fixed #406851, incorrect behaviour marking a dismissed task as done by Patrick Coleman
	* Added accelerators to the task editor by Patrick Coleman
    * Add plugin engine by Paulo Cabido
    * When GTG is already running, use DBUS to raise existing instance rather than failing silently
    * Refactorization and PEP8ification work by Jonathan Lange
    * New keyboard bindings for 'Mark as done' and 'Dismiss' actions
    * New keyboard bindings and accelerators by Jonathan Lange
    * DBus interface by Ryan Paul
    * Remove the 'Delete' button from the toolbar by Jonathan Lange
    * Fix a spelling mistake in the manpage by Jonathan Lange

2009-07-04 Getting Things GNOME! 0.1.2
    * Available in 18 languages, with 12 languages being more than 99% translated
    * Shadows around the listview widgets, by Jean-François Fortin Tam  
    * Fixes package dependencies
    * Tooltips for button
    * Automatically select title in task editor
    * Crash on startup with non empty LANGUAGE envvar
    * Use GNOME settings for toolbar, by Anton Rebguns
    * Better tag markup handling
    * No more multiple instances
    * HTTP link parsing by Ben Dowling
    * Update README by Michael Vogt
    * Update XML files sooner by Michael Vogt
    * Remember color (by Zach Sheperd)   
    * URLs can now include ';' characters. Fixes bug 360969
    * Added support for opening subtasks and links with the keyboard: Fixes bug 369272, by Ben Dowling
    * Add polish translation by Tomasz Maciejewski
    * Apply patch to fix bug #326388 by Brian Kennedy
    * Apply patch to fix bug #374745 by Brian Kennedy
    * Title for newly created task is now selected to allow easy editing
    * Apply patch to fix bug #374745 by Brian Kennedy
    * Fixed some bugs in the task editor

2009-04-01 Getting Things GNOME! 0.1.1
	* New icon from Kalle Persson
	* Translations are now possible
	* New features :
	  - Quickadd now accepts attributes (by Jonathan Barnoud)